--- a/Project.html
+++ b/Project.html
@@ -17,10 +17,9 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="Project.html">Project</a></li>
-        <li><a href="darshan.html">Darshan</a></li>
-        <li><a href="mateen.html">Mateen</a></li>
-        <li><a href="himanshu.html">Himanshu</a></li>
-        <li><a href="omkar.html">Omkar</a></li>
+        
+        <li><a href="himanshu.html">Darshan/Himanshu</a></li>
+        <li><a href="omkar.html">Mateen/Omkar</a></li>
       </ul>
     </nav>
   </header>
