--- a/about.html
+++ b/about.html
@@ -90,10 +90,9 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="Project.html">Project</a></li>
-            <li><a href="darshan.html">darshan</a></li>
-            <li><a href="mateen.html">mateen</a></li>
-            <li><a href="himanshu.html">himanshu</a></li>
-            <li><a href="omkar.html">omkar</a></li>
+        <li><a href="himanshu.html">Darshan/Himanshu</a></li>
+        <li><a href="omkar.html">Mateen/Omkar</a></li>
+           
             <li><a href="collab.html">Collab</a></li>
         </ul>
     </nav>
