--- a/omkar.html
+++ b/omkar.html
@@ -270,10 +270,8 @@ body{
   <div class="logo">CITY DESIGN</div>
   <ul class="nav-links">
     <li><a href="Project.html">Project</a></li>
-    <li><a href="darshan.html">darshan</a></li>
-    <li><a href="mateen.html">mateen</a></li>
-    <li><a href="himanshu.html">himanshu</a></li>
-    <li><a href="omkar.html">omkar</a></li>
+    <li><a href="himanshu.html">Darshan/Himanshu</a></li>
+        <li><a href="omkar.html">Mateen/Omkar</a></li>
   </ul>
 </nav>
 </header>
