--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="Project.html">Project</a></li>
-            <li><a href="darshan.html">darshan</a></li>
-            <li><a href="mateen.html">mateen</a></li>
-            <li><a href="himanshu.html">himanshu</a></li>
-            <li><a href="omkar.html">omkar</a></li>
+            <li><a href="himanshu.html">Darshan/Himanshu</a></li>
+        <li><a href="omkar.html">Mateen/Omkar</a></li></a></li>
             
         </ul>
     </nav>
