--- a/himanshu.html
+++ b/himanshu.html
@@ -181,7 +181,7 @@ body{
 
 <!-- HEADER -->
 <div class="header">
-  <h1>himanshu</h1>
+  <h1>Darshan/himanshu</h1>
   <h2>Smart City Services – Maharajpur</h2>
 </div>
 
