--- a/omkar.html
+++ b/omkar.html
@@ -286,7 +286,7 @@ body{
 </div>
 
 <div class="header">
-  <h1>omkar</h1>
+  <h1>Mateen/Omkar</h1>
   <h2>Smart City Services – Maharajpur</h2>
 </div>
 
